Fix merge conflict in pyproject.toml
Resolved merge conflict in dependencies section.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,14 +23,9 @@ dependencies = [
   "scipy",
   "torch",
   "unidecode",
-<<<<<<< HEAD
   "inflect",
-  "scipy",
-  "sounddevice"
-=======
-  "uvicorn",
-  "inflect"
->>>>>>> upstream/main
+  "sounddevice",
+  "uvicorn"
 ]
 license = {file = "LICENSE"}
 
