Initial commit: Complete Soprano TTS implementation with API and WebSocket streaming

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,15 @@ dependencies = [
   "sounddevice",
   "uvicorn"
 ]
-license = {file = "LICENSE"}
+license = {text = "MIT"}
 
 [project.urls]
 Homepage = "https://github.com/ekwek1/soprano"
 Issues = "https://github.com/ekwek1/soprano/issues"
 
 [project.scripts]
-soprano = "soprano.soprano_cli:main"
+soprano = "CLI.soprano_cli:main"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["soprano*", "CLI*"]
