LMDeploy noises fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "soprano-tts"
-version = "0.0.2"
+version = "0.2.0"
 authors = [
   { name="ekwek1", email="eugene.kwek.1@gmail.com" },
 ]
@@ -16,75 +16,28 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  "unidecode",
-  "inflect",
+  "accelerate",
+  "fastapi",
+  "gradio",
+  "huggingface_hub",
+  "numpy",
   "scipy",
-  "transformers",
-  "accelerate"
+  "sounddevice",
+  "torch>=2.1.0",
+  "transformers>=4.51.0",
+  "unidecode",
+  "uvicorn",
+  "inflect"
 ]
 license = {file = "LICENSE"}
 
 [project.optional-dependencies]
-cuda = [
-  "torch==2.8.0",
-  "torchaudio==2.8.0",
-  "lmdeploy"
-]
-rocm = [
-  "torch==2.8.0",
-  "torchaudio==2.8.0",
-  "pytorch-triton-rocm",
-  "datasets",
-  "prometheus_client"
-]
-rocm-nightly = [
-  "torch",
-  "torchaudio",
-  "pytorch-triton-rocm",
-  "datasets",
-  "prometheus_client"
-]
+lmdeploy = ["lmdeploy"]
 
 [project.urls]
 Homepage = "https://github.com/ekwek1/soprano"
 Issues = "https://github.com/ekwek1/soprano/issues"
 
-[tool.uv.sources]
-torch = [
-  { index = "pytorch-cuda", extra = "cuda" },
-  { index = "pytorch-rocm", extra = "rocm" },
-  { index = "pytorch-rocm-nightly", extra = "rocm-nightly" }
-]
-torchaudio = [
-  { index = "pytorch-cuda", extra = "cuda" },
-  { index = "pytorch-rocm", extra = "rocm" },
-  { index = "pytorch-rocm-nightly", extra = "rocm-nightly" }
-]
-pytorch-triton-rocm = [
-  { index = "pytorch-rocm", extra = "rocm" },
-  { index = "pytorch-rocm-nightly", extra = "rocm-nightly" }
-]
-
-[[tool.uv.index]]
-name = "pytorch-cuda"
-url = "https://download.pytorch.org/whl/cu126"
-explicit = true
-
-[[tool.uv.index]]
-name = "pytorch-rocm"
-url = "https://download.pytorch.org/whl/rocm6.4"
-explicit = true
-
-[[tool.uv.index]]
-name = "pytorch-rocm-nightly"
-url = "https://download.pytorch.org/whl/nightly/rocm7.1"
-explicit = true
-
-[tool.uv]
-conflicts = [
-  [
-    { extra = "cuda" },
-    { extra = "rocm" },
-    { extra = "rocm-nightly" },
-  ],
-]
+[project.scripts]
+soprano = "soprano.cli:main"
+soprano-webui = "soprano.webui:main"
