--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@ test.py
 *.wav
 dist/
 *.egg-info/
-run.sh
-.venv
+.venv/
+.task/
+BACKEND-SELECTION.md
+Taskfile.yml
+benchmark.py
+examples-backend.py
 uv.lock
-build
-.*/
+run.sh
